--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:commonjs": "NODE_ENV=production babel src/ --out-dir lib/",
     "build:standalone": "NODE_ENV=production webpack",
     "build:gh-pages": "rimraf example/dist && webpack --config example/webpack.config.production.js",
-    "start:example": "node example/server.js"
+    "start:example": "NODE_ENV=production node example/server.js"
   },
   "repository": {
     "type": "git",
