--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "author": "Alexander Uspensy <aeuspensky@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^15.3.1",
+    "react": "^0.14.7 || ^15.3.1",
     "react-dom": "^0.14.7 || ^15.3.1",
     "nprogress": "^0.2.0"
   },
@@ -53,6 +53,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.8.0",
     "normalize.css": "^4.2.0",
+    "nprogress": "^0.2.0",
     "postcss-loader": "^0.9.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
