added reducer description and changed package.json main prop

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-nprogress",
   "version": "0.1.0",
   "description": "Redux NProgress",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "files": [
     "dist",
     "lib"
